--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.16
+  go_router: ^14.6.2
 
 dev_dependencies:
   change_app_package_name: ^1.4.0
@@ -90,4 +91,4 @@ flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/utils/
   filename: app_assets.dart
-  field_prefix: 
+  field_prefix: null
