--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_svg: ^2.0.16
   get_it: ^8.0.3
   go_router: ^14.6.2
+  google_mobile_ads: ^5.2.0
 
 dev_dependencies:
   change_app_package_name: ^1.4.0
